<?xml version="1.0"?>
<package format="3">
  <name>handy1_bringup</name>
  <version>0.0.0</version>
  <description>Bringup (hardware + runtime) launch files for mCUB platform.</description>
  <maintainer email="cub@todo.todo">cub</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cub_bringup</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>ublox_gps</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
