<?xml version="1.0"?>
<package format="3">
  <name>mcub_bringup</name>
  <version>0.0.0</version>
  <description>Bringup (hardware + runtime) launch files for mCUB platform.</description>
  <maintainer email="cub@todo.todo">cub</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cub_commander</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>control_mcub</exec_depend>
  <exec_depend>wheel_odometry</exec_depend>
  <exec_depend>cub_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>cub_description</exec_depend>
  <exec_depend>cub_visualization</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>cub_diagnostics</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
